--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,6 +7,10 @@
             android:title="Notes" />
 
         <item
+            android:id="@+id/nav_homework"
+            android:title="Devoirs" />
+
+        <item
             android:id="@+id/nav_profil"
             android:title="Profil" />
 
